# promocode-service

./: README.md  main.py  postman.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
service/: exceptions.py  serializers.py  urls.py  views.py
service/admin/: __init__.py  activation.py  plan.py  promocode.py
service/migrations/: 0001_initial.py
service/models/: __init__.py  activation.py  plan.py  promocode.py  usage.py
service/services/: __init__.py  activate_promocode.py  check_promocode.py  test_validate_promocode.py  validate_promocode.py
